// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly Danger Button 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    [
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 36,
        },
        {
          "backgroundColor": "#E70000",
        },
        undefined,
      ],
      {
        "borderRadius": 24,
        "paddingVertical": 12,
      },
    ]
  }
  text="Primary"
>
  <Text.Primary
    bold={true}
    center={true}
    white={true}
  >
    Primary
  </Text.Primary>
</TouchableOpacity>
`;

exports[`renders correctly Primary Button 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    [
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 36,
        },
        {
          "backgroundColor": "#0F853B",
        },
        undefined,
      ],
      {
        "borderRadius": 24,
        "paddingVertical": 12,
      },
    ]
  }
  text="Primary"
>
  <Text.Primary
    bold={true}
    center={true}
    white={true}
  >
    Primary
  </Text.Primary>
</TouchableOpacity>
`;

exports[`renders correctly Secondary Button 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    [
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 36,
        },
        {
          "backgroundColor": "#3957D0",
        },
        undefined,
      ],
      {
        "borderRadius": 24,
        "paddingVertical": 12,
      },
    ]
  }
  text="Primary"
>
  <Text.Primary
    bold={true}
    center={true}
    white={true}
  >
    Primary
  </Text.Primary>
</TouchableOpacity>
`;

exports[`renders correctly fullwidth Danger Button 1`] = `
<TouchableOpacity
  fullWidth={true}
  onPress={[Function]}
  style={
    [
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 36,
        },
        {
          "backgroundColor": "#3957D0",
        },
        undefined,
        {
          "alignItems": "center",
          "paddingHorizontal": 0,
          "width": "100%",
        },
      ],
      {
        "borderRadius": 24,
        "paddingVertical": 12,
      },
    ]
  }
  text="Primary"
>
  <Text.Primary
    bold={true}
    center={true}
    white={true}
  >
    Primary
  </Text.Primary>
</TouchableOpacity>
`;

exports[`renders correctly fullwidth Danger Button with icon 1`] = `
<TouchableOpacity
  fullWidth={true}
  icon="calendar"
  onPress={[Function]}
  style={
    [
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 36,
        },
        {
          "backgroundColor": "#0F853B",
        },
        undefined,
        {
          "alignItems": "center",
          "paddingHorizontal": 0,
          "width": "100%",
        },
      ],
      {
        "borderRadius": 24,
        "paddingVertical": 12,
      },
    ]
  }
  text="Primary"
>
  <Text.Primary
    bold={true}
    center={true}
    white={true}
  >
    Primary
  </Text.Primary>
  <Ionicons
    color="#FFFFFF"
    name="calendar"
    size={24}
    style={
      {
        "marginHorizontal": 10,
      }
    }
  />
</TouchableOpacity>
`;

exports[`renders correctly fullwidth Primary Button 1`] = `
<TouchableOpacity
  fullWidth={true}
  onPress={[Function]}
  style={
    [
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 36,
        },
        {
          "backgroundColor": "#0F853B",
        },
        undefined,
        {
          "alignItems": "center",
          "paddingHorizontal": 0,
          "width": "100%",
        },
      ],
      {
        "borderRadius": 24,
        "paddingVertical": 12,
      },
    ]
  }
  text="Primary"
>
  <Text.Primary
    bold={true}
    center={true}
    white={true}
  >
    Primary
  </Text.Primary>
</TouchableOpacity>
`;

exports[`renders correctly fullwidth Primary Button with icon 1`] = `
<TouchableOpacity
  fullWidth={true}
  icon="calendar"
  onPress={[Function]}
  style={
    [
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 36,
        },
        {
          "backgroundColor": "#0F853B",
        },
        undefined,
        {
          "alignItems": "center",
          "paddingHorizontal": 0,
          "width": "100%",
        },
      ],
      {
        "borderRadius": 24,
        "paddingVertical": 12,
      },
    ]
  }
  text="Primary"
>
  <Text.Primary
    bold={true}
    center={true}
    white={true}
  >
    Primary
  </Text.Primary>
  <Ionicons
    color="#FFFFFF"
    name="calendar"
    size={24}
    style={
      {
        "marginHorizontal": 10,
      }
    }
  />
</TouchableOpacity>
`;

exports[`renders correctly fullwidth Secondary Button 1`] = `
<TouchableOpacity
  fullWidth={true}
  onPress={[Function]}
  style={
    [
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 36,
        },
        {
          "backgroundColor": "#3957D0",
        },
        undefined,
        {
          "alignItems": "center",
          "paddingHorizontal": 0,
          "width": "100%",
        },
      ],
      {
        "borderRadius": 24,
        "paddingVertical": 12,
      },
    ]
  }
  text="Primary"
>
  <Text.Primary
    bold={true}
    center={true}
    white={true}
  >
    Primary
  </Text.Primary>
</TouchableOpacity>
`;

exports[`renders correctly fullwidth Secondary Button with icon 1`] = `
<TouchableOpacity
  fullWidth={true}
  icon="calendar"
  onPress={[Function]}
  style={
    [
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": 36,
        },
        {
          "backgroundColor": "#0F853B",
        },
        undefined,
        {
          "alignItems": "center",
          "paddingHorizontal": 0,
          "width": "100%",
        },
      ],
      {
        "borderRadius": 24,
        "paddingVertical": 12,
      },
    ]
  }
  text="Primary"
>
  <Text.Primary
    bold={true}
    center={true}
    white={true}
  >
    Primary
  </Text.Primary>
  <Ionicons
    color="#FFFFFF"
    name="calendar"
    size={24}
    style={
      {
        "marginHorizontal": 10,
      }
    }
  />
</TouchableOpacity>
`;
